--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -18,6 +18,11 @@ jobs:
         
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+        
+      - name: Install renv and restore environment
+        run: |
+          R -e "install.packages('renv')"   # Install renv
+          R -e "renv::restore()"             # Restore the environment from renv.lock
 
       - name: Render Quarto Document
         run: quarto render deviant_art_deployment.qmd --to html
