--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -18,6 +18,12 @@ jobs:
         
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+
+      - name: Install system dependencies (including compilers)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential gfortran libcurl4-openssl-dev libssl-dev libxml2-dev
+
         
       - name: Install renv and restore environment
         run: |
