--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -19,6 +19,17 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
+      # Cache renv environment to speed up future runs
+      - name: Cache renv
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/R/renv
+            renv.lock
+          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-renv-
+            
       - name: Install system dependencies (including compilers)
         run: |
           sudo apt-get update
