--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -19,17 +19,6 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      # Cache renv environment to speed up future runs
-      - name: Cache renv
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cache/R/renv
-            renv.lock
-          key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-renv-
-            
       - name: Install system dependencies (including compilers)
         run: |
           sudo apt-get update
@@ -48,7 +37,12 @@ jobs:
             libtiff-dev \
             libjpeg-dev \
             libpng-dev
-        
+       
+      - name: Install devtools and specific version of MASS
+        run: |
+          R -e "install.packages('devtools')"  # Install devtools
+          R -e "devtools::install_version('MASS', version = '7.3-53')"  # Install the specific older version of MASS
+
       - name: Install renv and restore environment
         run: |
           R -e "install.packages('renv')"   # Install renv
