--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -40,8 +40,9 @@ jobs:
        
       - name: Install devtools and specific version of MASS
         run: |
-          R -e "install.packages('devtools')"  # Install devtools
-          R -e "devtools::install_version('MASS', version = '7.3-53')"  # Install the specific older version of MASS
+          R -e "install.packages('devtools', repos='https://cloud.r-project.org')"   # Install devtools
+          R -e "install.packages('renv', repos='https://cloud.r-project.org')"       # Install renv
+          R -e "devtools::install_version('MASS', version = '7.3-53')"               # Install specific version of MASS
 
       - name: Install renv and restore environment
         run: |
