--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -18,8 +18,10 @@ jobs:
         
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.3'
 
-      - name: Install system dependencies (including compilers)
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -36,12 +38,13 @@ jobs:
             liblzma-dev \
             libtiff-dev \
             libjpeg-dev \
-            libpng-dev
+            libpng-dev \
+            libc6-dev \
+            libgomp1
        
       - name: Install devtools and specific version of MASS
         run: |
-          R -e "install.packages('remotes')"  # Install remotes
-          R -e "remotes::install_version('MASS', version = '7.3-53')"  # Install specific version of MASS
+          R -e "install.packages('MASS')"
 
       - name: Install renv and restore environment
         run: |
