--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -42,14 +42,11 @@ jobs:
             libc6-dev \
             libgomp1
        
-      - name: Install devtools and specific version of MASS
-        run: |
-          R -e "install.packages('MASS')"
-
       - name: Install renv and restore environment
         run: |
-          R -e "install.packages('renv')"   # Install renv
-          R -e "renv::restore()"             # Restore the environment from renv.lock
+          R -e "install.packages('renv')"
+          R -e "options(repos = c(CRAN = 'https://packagemanager.posit.co/cran/__linux__/jammy/latest'))"  # Replace 'jammy' with the appropriate distro if needed
+          R -e "renv::restore()"
 
       - name: Render Quarto Document
         run: quarto render deviant_art_deployment.qmd --to html
