--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -13,14 +13,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-      # Step 2: Cache R packages
-      - name: Cache R packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/R
-          key: ${{ runner.os }}-R-${{ hashFiles('**/renv.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-R-
             
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
@@ -29,6 +21,22 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3'
+
+      # Step 2: Cache R packages
+      - name: Cache R packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/R
+          key: ${{ runner.os }}-R-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-R-
+
+# Step 3: Set CRAN repository and renv config
+      - name: Set CRAN repository and renv config
+        run: |
+          echo "RENV_CONFIG_REPOS_OVERRIDE=https://packagemanager.posit.co/cran/2023-01-01" >> $GITHUB_ENV
+          echo "RENV_DOWNLOAD_METHOD=auto" >> $GITHUB_ENV
+          echo "RENV_CONFIG_REPOS_DISABLE_TARGET_REPOS=TRUE" >> $GITHUB_ENV
 
       - name: Install system dependencies
         run: |
@@ -51,11 +59,12 @@ jobs:
             libc6-dev \
             libgomp1
           
+# Step 4: Install renv and restore environment
       - name: Install renv and restore environment
         run: |
           R -e "install.packages('renv')"
-          R -e "options(repos = c(CRAN = 'https://packagemanager.posit.co/cran/latest'))"
           R -e "renv::restore()"
+          R -e "renv::install('MASS@7.3-60.0.1')"  # Ensures MASS installs at this version
           
       - name: Render Quarto Document
         run: quarto render deviant_art_deployment.qmd --to html
