--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -13,15 +13,23 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
-            
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-        
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.3'
 
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+
+      # Step 2: Cache R packages
+      - name: Cache R packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/R
+          key: ${{ runner.os }}-R-${{ hashFiles('**/renv.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-R-
+            
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -43,16 +51,13 @@ jobs:
             libc6-dev \
             libgomp1
 
-      - name: Set CRAN repository and renv config
+      # Step 4: Set CRAN repository and renv configuration
+      - name: Set CRAN repository and renv configuration
         run: |
-          echo "RENV_CONFIG_REPOS_OVERRIDE=https://packagemanager.posit.co/cran/2023-01-01" >> $GITHUB_ENV
+          echo "RENV_CONFIG_REPOS_OVERRIDE=https://packagemanager.rstudio.com/cran/__linux__/focal/latest" >> $GITHUB_ENV
           echo "RENV_DOWNLOAD_METHOD=auto" >> $GITHUB_ENV
           echo "RENV_CONFIG_REPOS_DISABLE_TARGET_REPOS=TRUE" >> $GITHUB_ENV
-          echo "RENV_CONFIG_INSTALL_FROM_SOURCE=Matrix,FALSE" >> $GITHUB_ENV
-
-      - name: Install Matrix package binary
-        run: |
-          R -e "install.packages('Matrix', type = 'binary')"
+          echo "RENV_CONFIG_INSTALL_FROM_SOURCE=FALSE" >> $GITHUB_ENV
           
 # Step 4: Install renv and restore environment
       - name: Install renv and restore environment
