--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,27 +1,21 @@
 name: Render Quarto Document
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *" # Runs daily at midnight UTC; adjust as needed
-  workflow_dispatch: # Allows for manual triggering of the action
+    - cron: '0 0 * * *'  # Daily at midnight
 
 jobs:
   render:
     runs-on: ubuntu-latest
+    container: rocker/r-ver:4.3.3  # Docker container with R 4.3.3
 
     steps:
+      # Step 1: Check out the repository
       - name: Check out repository
         uses: actions/checkout@v3
 
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: '4.3'
-
-      - name: Set up Quarto
-        uses: quarto-dev/quarto-actions/setup@v2
-
-      # Step 2: Cache R packages
+      # Step 2: Cache R packages to speed up renv restore
       - name: Cache R packages
         uses: actions/cache@v3
         with:
@@ -29,42 +23,27 @@ jobs:
           key: ${{ runner.os }}-R-${{ hashFiles('**/renv.lock') }}
           restore-keys: |
             ${{ runner.os }}-R-
-            
+
+      # Step 3: Install system dependencies needed for R packages
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            build-essential \
-            gfortran \
-            libcurl4-openssl-dev \
-            libssl-dev \
-            libxml2-dev \
-            libatlas-base-dev \
-            liblapack-dev \
-            libblas-dev \
-            libbz2-dev \
-            libz-dev \
-            liblzma-dev \
-            libtiff-dev \
-            libjpeg-dev \
-            libpng-dev \
-            libc6-dev \
-            libgomp1
+          apt-get update
+          apt-get install -y libxml2-dev libcurl4-openssl-dev libssl-dev
 
-      # Step 4: Set CRAN repository and renv configuration
-      - name: Set CRAN repository and renv configuration
+      # Step 4: Set up CRAN repository and renv configuration for binary packages
+      - name: Set up CRAN repository and renv configuration
         run: |
           echo "RENV_CONFIG_REPOS_OVERRIDE=https://packagemanager.rstudio.com/cran/__linux__/focal/latest" >> $GITHUB_ENV
-          echo "RENV_DOWNLOAD_METHOD=auto" >> $GITHUB_ENV
           echo "RENV_CONFIG_REPOS_DISABLE_TARGET_REPOS=TRUE" >> $GITHUB_ENV
           echo "RENV_CONFIG_INSTALL_FROM_SOURCE=FALSE" >> $GITHUB_ENV
-          
-# Step 4: Install renv and restore environment
+
+      # Step 5: Install renv and restore the environment
       - name: Install renv and restore environment
         run: |
           R -e "install.packages('renv')"
           R -e "renv::restore()"
-          R -e "renv::install('MASS@7.3-60.0.1')"  # Ensures MASS installs at this version
+
+      # Step 6: Render the Quarto document
           
       - name: Render Quarto Document
         run: quarto render deviant_art_deployment.qmd --to html
