--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -24,11 +24,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-R-
 
-      # Step 3: Install system dependencies needed for R packages
-      - name: Install system dependencies
+      - name: Install additional system dependencies
         run: |
           apt-get update
           apt-get install -y libxml2-dev libcurl4-openssl-dev libssl-dev
+          apt-get install -y gfortran libblas-dev liblapack-dev  # Extra dependencies for Matrix package
 
       # Step 4: Set up CRAN repository and renv configuration for binary packages
       - name: Set up CRAN repository and renv configuration
