--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -12,15 +12,22 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build Docker image
-        run: docker build -t quarto-render .
+        run: docker build -t quarto-render:latest .
 
-      # Authenticate with Google Sheets using service account credentials
-      - name: Authenticate with Google Sheets
+      # Step to run the Docker image and execute commands inside it
+      - name: Run Quarto Render in Docker
         run: |
-          echo "${{ secrets.GOOGLE_SHEET_CREDENTIALS }}" > /tmp/service-account.json
-          R -e "library(googlesheets4); gs4_auth(path = '/tmp/service-account.json')"
-
-      - name: Render Quarto document
-        run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace quarto-render R -e "quarto::quarto_render('deviant_art_deployment.qmd')"
+          docker run --rm \
+            -v ${{ github.workspace }}:/workspace \
+            -w /workspace \
+            -e GOOGLE_SHEET_CREDENTIALS="${{ secrets.GOOGLE_SHEET_CREDENTIALS }}" \
+            quarto-render:latest \
+            bash -c "
+              echo \"$GOOGLE_SHEET_CREDENTIALS\" > /tmp/service-account.json && \
+              R -e 'library(googlesheets4); gs4_auth(path = \"/tmp/service-account.json\")' && \
+              quarto render deviant_art_deployment.qmd --to html
+            "
